clusters/seaweedfs-cluster/seaweedfs/seaweedfs-master-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: master-access
  namespace: seaweedfs
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: master
      app.kubernetes.io/instance: seaweed-sample
      app.kubernetes.io/managed-by: seaweedfs-operator
      app.kubernetes.io/name: seaweedfs
      io.kubernetes.pod.namespace: seaweedfs
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: volume
            app.kubernetes.io/instance: seaweed-sample
            app.kubernetes.io/managed-by: seaweedfs-operator
            app.kubernetes.io/name: seaweedfs
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "8444"
              protocol: TCP
            - port: "18844"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: master
            app.kubernetes.io/instance: seaweed-sample
            app.kubernetes.io/managed-by: seaweedfs-operator
            app.kubernetes.io/name: seaweedfs
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "9333"
              protocol: TCP
            - port: "19333"
              protocol: TCP
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: seaweedfs-operator
            app.kubernetes.io/name: seaweedfs-operator
            io.kubernetes.pod.namespace: seaweedfs-operator
        - matchLabels:
            app.kubernetes.io/instance: seaweed-sample
            app.kubernetes.io/managed-by: seaweedfs-operator
            app.kubernetes.io/name: seaweedfs
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "9333"
              protocol: TCP
            - port: "19333"
              protocol: TCP
