clusters/seaweedfs-cluster/seaweedfs/seaweedfs-s3-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: s3-access
  namespace: seaweedfs
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: s3
      app.kubernetes.io/instance: seaweedfs-sample
      app.kubernetes.io/managed-by: seaweedfs-operator
      app.kubernetes.io/name: seaweedfs
      io.kubernetes.pod.namespace: seaweedfs
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: filer
            app.kubernetes.io/instance: seaweedfs-sample
            app.kubernetes.io/managed-by: seaweedfs-operator
            app.kubernetes.io/name: seaweedfs
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "18888"
              protocol: TCP
