clusters/seaweedfs-cluster/seaweedfs/seaweedfs-volume-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: volume-access
  namespace: seaweedfs
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: volume
      app.kubernetes.io/instance: seaweed-sample
      app.kubernetes.io/managed-by: seaweedfs-operator
      app.kubernetes.io/name: seaweedfs
      io.kubernetes.pod.namespace: seaweedfs
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: master
            app.kubernetes.io/instance: seaweed-sample
            app.kubernetes.io/managed-by: seaweedfs-operator
            app.kubernetes.io/name: seaweedfs
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "9333"
              protocol: TCP
            - port: "19333"
              protocol: TCP
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: master
            app.kubernetes.io/instance: seaweed-sample
            app.kubernetes.io/managed-by: seaweedfs-operator
            app.kubernetes.io/name: seaweedfs
            io.kubernetes.pod.namespace: seaweedfs
        - matchLabels:
            app.kubernetes.io/component: s3
            app.kubernetes.io/instance: seaweed-sample
            app.kubernetes.io/managed-by: seaweedfs-operator
            app.kubernetes.io/name: seaweedfs
            io.kubernetes.pod.namespace: seaweedfs
        - matchLabels:
            app.kubernetes.io/component: mount
            app.kubernetes.io/instance: seaweedfs
            app.kubernetes.io/managed-by: seaweedfs-operator
            app.kubernetes.io/name: seaweedfs-csi-driver
            io.kubernetes.pod.namespace: seaweedfs-csi-driver
      toPorts:
        - ports:
            - port: "8444"
              protocol: TCP
            - port: "18444"
              protocol: TCP
