clusters/seaweedfs-cluster/seaweedfs/seaweedfs-worker-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: worker-access
  namespace: seaweedfs
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: worker
      app.kubernetes.io/instance: seaweed-sample
      app.kubernetes.io/managed-by: seaweedfs-operator
      app.kubernetes.io/name: seaweedfs
      io.kubernetes.pod.namespace: seaweedfs
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: admin
            app.kubernetes.io/instance: seaweed-sample
            app.kubernetes.io/managed-by: seaweedfs-operator
            app.kubernetes.io/name: seaweedfs
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "23646"
              protocol: TCP
            - port: "33646"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: master
            app.kubernetes.io/instance: seaweed-sample
            app.kubernetes.io/managed-by: seaweedfs-operator
            app.kubernetes.io/name: seaweedfs
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "9333"
              protocol: TCP
            - port: "19333"
              protocol: TCP
